# team-viewer-cli

./: Cargo.toml
src/: cli.rs  config.rs  lib.rs  main.rs  weather_api.rs
src/commands/: add.rs  list.rs  mod.rs  remove.rs  weather.rs
tests/: config-test.rs  weather_api-test.rs
tests/commands/: add-test.rs
