[package]
name = "team-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0.1"
chrono = "0.4"
tempfile = "3.3"
mockito = "1.0"

[lib]
name = "team_viewer"
path = "src/lib.rs"

[[bin]]
name = "team_viewer"
path = "src/main.rs"
